syntax = "proto3";
package dlp.options.gloo.solo.io;
option go_package = "github.com/solo-io/gloo/projects/gloo/pkg/api/v1/enterprise/options/dlp";

import "validate/validate.proto";
import "github.com/solo-io/gloo/projects/gloo/api/v1/core/matchers/matchers.proto";

import "github.com/solo-io/solo-kit/api/external/envoy/type/percent.proto";
import "github.com/solo-io/gloo/projects/gloo/api/external/envoy/extensions/transformation_ee/transformation.proto";
import "extproto/ext.proto";
option (extproto.equal_all) = true;
option (extproto.hash_all) = true;
option (extproto.clone_all) = true;

/*
    DLP (data loss prevention)
    The purpose of this filter is to prevent sensitive data from being exposed.
    This is accomplished by doing a series of regex replacements on the response body and/or headers.
*/

// Listener level config for dlp filter
message FilterConfig {
    enum EnableFor {
        // Only enable DLP masking of response bodies. Defaults to this value.
        RESPONSE_BODY = 0;
        // Only enable DLP masking of access logs.
        ACCESS_LOGS = 1;
        // Enable DLP masking for both responses and access logs.
        ALL = 2;
    }

    // The list of transformation, matcher pairs.
    // The first rule which matches will be applied.
    repeated DlpRule dlp_rules = 1;

    // Whether responses, access logs, or both should be masked by the applied actions.
    // If not defined, masking will only be enabled for responses bodies.
    EnableFor enabled_for = 2;
}

// Rule which applies a given set of actions to a matching route.
// The route matching functions exactly the same as the envoy routes in the virtual host.
message DlpRule {
    // Matcher by which to determine if the given transformation should be applied
    // if omitted, will it match all (i.e., default to / prefix matcher)
    matchers.core.gloo.solo.io.Matcher matcher = 1;
    // List of data loss prevention actions to be applied.
    // These actions will be applied in order, one at a time.
    repeated Action actions = 2;
}

/*
    Route/Vhost level config for dlp filter

    If a config is present on the route or vhost level it will completely overwrite the
    listener level config.
*/
message Config {
    enum EnableFor {
        // Only enable DLP masking of response bodies. Defaults to this value.
        RESPONSE_BODY = 0;
        // Only enable DLP masking of access logs.
        ACCESS_LOGS = 1;
        // Enable DLP masking for both responses and access logs.
        ALL = 2;
    }

    // List of data loss prevention actions to be applied.
    // These actions will be applied in order, one at a time.
    repeated Action actions = 1;
    // Whether responses, access logs, or both should be masked by the applied actions.
    // If not defined, masking will only be enabled for responses bodies.
    EnableFor enabled_for = 2;
}
/*
    A single action meant to mask sensitive data.
    The action type represents a set of pre configured actions,
    as well as the ability to create custom actions.
    These actions can also be shadowed, a shadowed action will be recorded
    in the statistics, and debug logs, but not actually committed in the response body.

    To use a pre-made action simply set the action type to anything other than `CUSTOM`

    ``` yaml
    actionType: VISA
    ```

    To create a custom action set the custom action field. The default enum value
    is custom, so that can be left empty.

    ``` yaml
    customAction:
        name: test
        regex:
            - "hello"
            - "world"
        maskChar: Y
        percent: 60
    ```


*/
message Action {
    /*
    The following pre-made action types map to subgroup 1 of the listed regex patterns:

    SSN:
			- '(?:^|\D)([0-9]{9})(?:\D|$)'
			- '(?:^|\D)([0-9]{3}\-[0-9]{2}\-[0-9]{4})(?:\D|$)'
			- '(?:^|\D)([0-9]{3}\ [0-9]{2}\ [0-9]{4})(?:\D|$)'

		MASTERCARD:
		  - '(?:^|\D)(5[1-5][0-9]{2}(?:\ |\-|)[0-9]{4}(?:\ |\-|)[0-9]{4}(?:\ |\-|)[0-9]{4})(?:\D|$)'

		VISA:
		  - '(?:^|\D)(4[0-9]{3}(?:\ |\-|)[0-9]{4}(?:\ |\-|)[0-9]{4}(?:\ |\-|)[0-9]{4})(?:\D|$)'

		AMEX:
		  - '(?:^|\D)((?:34|37)[0-9]{2}(?:\ |\-|)[0-9]{6}(?:\ |\-|)[0-9]{5})(?:\D|$)'

		DISCOVER:
		  - '(?:^|\D)(6011(?:\ |\-|)[0-9]{4}(?:\ |\-|)[0-9]{4}(?:\ |\-|)[0-9]{4})(?:\D|$)'

		JCB:
		  - '(?:^|\D)(3[0-9]{3}(?:\ |\-|)[0-9]{4}(?:\ |\-|)[0-9]{4}(?:\ |\-|)[0-9]{4})(?:\D|$)'
			- '(?:^|\D)((?:2131|1800)[0-9]{11})(?:\D|$)'

		DINERS_CLUB:
		  - '(?:^|\D)(30[0-5][0-9](?:\ |\-|)[0-9]{6}(?:\ |\-|)[0-9]{4})(?:\D|$)'
			- '(?:^|\D)((?:36|38)[0-9]{2}(?:\ |\-|)[0-9]{6}(?:\ |\-|)[0-9]{4})(?:\D|$)'

		CREDIT_CARD_TRACKERS:
			- '([1-9][0-9]{2}\-[0-9]{2}\-[0-9]{4}\^\d)'
			- '(?:^|\D)(\%?[Bb]\d{13,19}\^[\-\/\.\w\s]{2,26}\^[0-9][0-9][01][0-9][0-9]{3})'
			- '(?:^|\D)(\;\d{13,19}\=(?:\d{3}|)(?:\d{4}|\=))'

		ALL_CREDIT_CARDS:
		  - (All credit card related regexes from above)

		ALL_CREDIT_CARDS_COMBINED:
		  - Same as ALL_CREDIT_CARDS but using a single action instead of multiple which should be marginally faster

    */
    enum ActionType {
        CUSTOM = 0;
        SSN = 1;
        MASTERCARD = 2;
        VISA = 3;
        AMEX = 4;
        DISCOVER = 5;
        JCB = 6;
        DINERS_CLUB = 7;
        CREDIT_CARD_TRACKERS = 8;
        ALL_CREDIT_CARDS = 9;
        KEYVALUE = 10;
        ALL_CREDIT_CARDS_COMBINED = 11;
    }

    // The action type to implement.
    ActionType action_type = 1;
    // The custom user action to be applied.
    // This field will only be used if the custom action type is specified above.
    CustomAction custom_action = 2;
    // The key/value action to be applied.
    // This field will only be used if the KEYVALUE action type is specified above
    // will only affect access logs and response headers, not response bodies
    KeyValueAction key_value_action = 4;
    // Shadow represents whether the action should be taken, or just recorded.
    bool shadow = 3;
}

/*
    A user defined custom action to carry out on the response body.

    The list of regex strings are applied in order. So for instance, if there is a response body with the content:
    `hello world`

    And there is a custom action
    ``` yaml
    customAction:
        name: test
        regex:
            - "hello"
            - "world"
        maskChar: Y
        percent: 60
    ```

    the result would be:
    `YYYlo YYYld`

    If the mask_char, and percent were left to default, the result would be:
    `XXXXo XXXXd`

*/
message CustomAction {
    // The name of the custom action.
    // This name is used for logging and debugging purposes.
    string name = 1;
    // The list of regex strings which will be applied in order.
    repeated string regex = 2 [deprecated = true];
    // The masking character for the sensitive data.
    // default value: X
    string mask_char = 3;
    // The percent of the string which will be masked by the mask_char
    // default value: 75%
    // rounds ratio (percent/100) by std::round http://www.cplusplus.com/reference/cmath/round/
    .solo.io.envoy.type.Percent percent = 4;
    // List of regexes to apply to the response body to match data which should be
    // masked. They will be applied iteratively in the order which they are
    // specified. If this field and `regex` are both provided, all the regexes will
    // be applied iteratively in the order provided, starting with the ones from `regex`
    repeated .envoy.config.filter.http.transformation_ee.v2.RegexAction regex_actions = 5;
}

message KeyValueAction {
    // The name of the key/value action.
    // This name is used for logging and debugging purposes.
    string name = 1;
    // The masking character for the sensitive data.
    // default value: X
    string mask_char = 2;
    // The percent of the string which will be masked by the mask_char
    // default value: 75%
    // rounds ratio (percent/100) by std::round http://www.cplusplus.com/reference/cmath/round/
    .solo.io.envoy.type.Percent percent = 3;
    // The key for which corresponding header names/dynamic metadata values should be censored
    // Must be specified
    string key_to_mask = 4;
}
